@@ -2,6 +2,11 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+16-Oct-2004
+~~~~~~~~~~~
+Some improvements to saved display settings (Takuo Yonezawa and Stephen 
+Watson).
+
 15-Oct-2004
 ~~~~~~~~~~~
 Allow multiple arguments for executable pinboard and panel icons (Thomas
